--- a/src/app/todo/todo-item/todo-item.component.html
+++ b/src/app/todo/todo-item/todo-item.component.html
@@ -1,9 +1,15 @@
 <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
-<li class="completed">
+<!--<li class="completed" *ngIf="item">-->
+<li [ngClass]="{'completed': item.completed, 'editing': (item.editing && !item.completed)}" *ngIf="item">
   <div class="view">
-    <input class="toggle" type="checkbox" checked>
-    <label>Save the world</label>
-    <button class="destroy"></button>
+    <input class="toggle" type="checkbox" [(ngModel)]="item.completed" (click)="changeValue()">
+    <label [ngStyle]="{
+              'text-decoration-line': item.completed ? 'line-through' : 'none'
+            }"
+           (click)="item.editing = (!item.completed)"
+    >{{item.label}}</label>
+    <!--    <button *ngIf="item.completed" class="destroy" (click)="deleteItem()"></button>-->
+    <button *ngIf="item.completed" class="destroy" (click)="deleteItem()"></button>
   </div>
-  <input class="edit" value="Salvar el mundo">
+  <input class="edit" [(ngModel)]="item.label" (keyup.enter)="item.editing = false">
 </li>
