--- a/src/app/todo/todos-list/todos-list.component.html
+++ b/src/app/todo/todos-list/todos-list.component.html
@@ -1,4 +1,7 @@
 <ul class="todo-list">
   <!-- These are here just to show the structure of the list items -->
-  <app-todo-item></app-todo-item>
+  <app-todo-item *ngFor="let item of todoItems" [itemIn]="item"
+                 (checkedValueEmitter)="toggleCheckedValue($event)"
+                 (deleteItemEmitter)="deleteItem($event)"
+  ></app-todo-item>
 </ul>
